compiler/testData/diagnostics/tests/multiplatform/topLevelFun/headerWithoutImpl.kt
// RUN_PIPELINE_TILL: FIR2IR
// MODULE: m1-common
// FILE: common.kt

expect fun <!NO_ACTUAL_FOR_EXPECT!>foo<!>()
